# cachew-db

./: .gitignore  CASP_SPECIFICATION.md  README.md
.github/workflows/: ci.yml  ci_cli_client.yml  ci_server.yml
cachew/: Cargo.toml
cachew/src/: cli.rs  database.rs  main.rs  parser.rs  response.rs  schemas.rs  server.rs  state.rs  store.rs
cachew/src/casp_parser/: parser.rs
cachew/src/cli/: arguments.rs  mod.rs  validators.rs
cachew/src/errors/: authentication_errors.rs  database_errors.rs  mod.rs  parser_errors.rs  protocol_errors.rs
cachew/src/query_parser/: mod.rs  parser.rs  string_utils.rs
cli-client/: Cargo.toml  test_client.py
cli-client/src/: cli.rs  interface.rs  main.rs  parser.rs
