[package]
name = "cachew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
bincode = "1.0"
regex = "1.5"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.8"
clap = { version = "4.3.0", features = ["derive"] }